# rust-dbus-rqrng-service

./: Cargo.toml  readme.md
docs/: example.toml
scripts/: install.sh  restart.sh
src/: aggregator.rs  circular_buffer.rs  config.rs  error.rs  lrng.rs  main.rs  mock_rng.rs  sources.rs  two_source_xor.rs
