[package]
name = "trng-dbus"
version = "0.1.0"
edition = "2021"

[dependencies]
zbus = { version = "5.1.1", features = ["tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
env_logger = "0.11.5"
libc = "0.2"
log = "0.4.22"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
async-trait = "0.1"
futures = "0.3"

[[bin]]
name = "trngdbus"
path = "src/main.rs"
